fixes image height issues on smaller screens

--- a/src/components/main/projects/projects.scss
+++ b/src/components/main/projects/projects.scss
@@ -12,7 +12,8 @@
 .project-image {
   width: 100%;
   max-width: 1000px;
-  max-height: 750px;
+  // max-height: 750px;
+  max-height: 70vh;
   object-fit: contain;
 }
 
